# FEA_MNE772

./: CMakeLists.txt  drawing.cpp  drawing.h  dxfreader.cpp  dxfreader.h  graphicwindow.cpp  graphicwindow.h  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  material.cpp  material.h  model.cpp  model.h  msglog.cpp  msglog.h  node3d.cpp  node3d.h  shaders.qrc  solid3d.cpp  solid3d.h  solid3delement.cpp  solid3delement.h  solid3dfilemanager.cpp  solid3dfilemanager.h  solid3dreader.cpp  solid3dreader.h  truss3d.cpp  truss3d.h  truss3delement.cpp  truss3delement.h  truss3dfilemanager.cpp  truss3dfilemanager.h  truss3dreader.cpp  truss3dreader.h  viewcontroller.cpp  viewcontroller.h  vtkgraphicwindow.cpp  (+1 more)
models/: arc roof_v9.ftxl  beam.cdb  beam.fsxl  cobertura plana_v6.dxf  cobertura plana_v6.ftxl  connection_v2.cdb  connection_v2.fsxl  cube.cdb  cube.fsxl  cube_crack.cdb  cube_v2.cdb  cube_v3.fsxl  cube_v4.cdb  cylinder.cdb  cylinder_v2.ftxl  cylinder_v3.cdb  flat roof_v6.ftxl  frame.cdb  gear_v3.cdb  matrix.txt  plate.cdb  rib_structure.cdb  rod_v2.cdb  screw.cdb  spherical tank_v2.cdb  spring_v6.cdb  square_bar.cdb  square_bar.fsxl  strange_cube_v1.cdb  test_sample.cdb  tower_v4.dxf  tower_v4.ftxl  tube.cdb  turbine.cdb  wheel rim.cdb
models/old/: UnstructuredGrid.vtk  beam.vtk  cobertura arco_v9.vtk  cobertura plana_v6.vtk  connection_v2.vtk  cylinder_v2.vtk  engrenagem_v3.vtk  rod_v2.vtk  spherical tank_v2.vtk  strange_cube_v1.vtk  tower_v4.vtk  wheel rim.vtk
shaders/: gridxy.vs  initialmodel.fs  legend.fs  legend.vs  solid3d.vs  solid3dselection.fs  solid3dselection.vs  solid3dsimulationmodel.fs  solid3dsimulationmodel.vs  solid3dsolvedmodel.fs  solid3dsolvedmodel.vs  solvedmodel.fs  solvedmodel.gs  solvedmodel.vs  text.gs
